--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -1,7 +1,7 @@
 version: '3'
 
 volumes:
-  pg_data:
+  foodgram_pg_data:
   static:
   media:
 
@@ -10,7 +10,7 @@ services:
     image: postgres:13
     env_file: .env
     volumes:
-      - pg_data:/var/lib/postgresql/data
+      - foodgram_pg_data:/var/lib/postgresql/data
   backend:
     image: dankovaalina/foodgram_backend
     env_file: .env
