--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -25,6 +25,7 @@ services:
     command: cp -r /app/build/. /frontend_static/
     volumes:
       - static:/frontend_static
+      - media:/media
   gateway:
     image: dankovaalina/foodgram_gateway
     env_file: .env
